--- a/adm/html/index.html
+++ b/adm/html/index.html
@@ -24,6 +24,7 @@
 
   <!-- Custom -->
   <script src="../js/admin-custom.js" defer></script>
+  <link rel="stylesheet" href="/style/resources/css/krds-custom.css">
   <link rel="stylesheet" href="../css/admin-custom.css">
 
 </head>
@@ -59,31 +60,27 @@
                         <button class="tab-btn">특수학교</button>
                         <button class="tab-btn">각종학교</button>
                     </div>
-                    <div class="check-filter">
-                        <label class="checkbox-item">
-                            <input type="checkbox" checked>
-                            <span class="checkmark"></span>
-                            <span>전체</span>
-                            <span class="count">48개</span>
-                        </label>
-                        <label class="checkbox-item">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span>심사중</span>
-                            <span class="count">20개</span>
-                        </label>
-                        <label class="checkbox-item">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span>선정</span>
-                            <span class="count">18개</span>
-                        </label>
-                        <label class="checkbox-item">
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                            <span>미선정</span>
-                            <span class="count">10개</span>
-                        </label>
+                    <div class="krds-check-area">
+                      <div class="krds-form-check">
+                        <input type="checkbox" name="chk_1" id="chk_1" checked>
+                        <label for="chk_1">전체</label>
+                        <span class="count"><em>48</em>개</span>
+                      </div>
+                      <div class="krds-form-check">
+                        <input type="checkbox" name="chk_1" id="chk_2">
+                        <label for="chk_2">심사중</label>
+                        <span class="count"><em>48</em>개</span>
+                      </div>
+                      <div class="krds-form-check">
+                        <input type="checkbox" name="chk_1" id="chk_3" disabled>
+                        <label for="chk_3">선정</label>
+                        <span class="count"><em>48</em>개</span>
+                      </div>
+                      <div class="krds-form-check">
+                        <input type="checkbox" name="chk_1" id="chk_4" disabled checked>
+                        <label for="chk_4">미선정</label>
+                        <span class="count"><em>48</em>개</span>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -134,7 +131,7 @@
             </div>
 
             <div class="krds-table-wrap">
-              <table class="tbl col data">
+              <table class="tbl col data center">
                 <caption>사업신청 목록 표</caption>
                 <colgroup>
                   <col style="width: 40px;">
@@ -197,7 +194,12 @@
                     </td>
                     <td><div>홍길동</div><div>042-222-3333</div></td>
                     <td>2025-07-24</td>
-                    <td><button class="krds-btn small text">보기 <i class="svg-icon ico-angle right"></i></button></td>
+                    <td>
+                      <a href="javascript:void(0)" download="" class="krds-btn line small">
+                        <span class="sr-only">신청서 다운로드</span>
+                        <i class="svg-icon ico-docu"></i>
+                      </a>
+                    </td>
                     <td>
                       <select class="krds-form-select small" title="심사결과 선택">
                         <option selected>선정</option>
@@ -205,7 +207,7 @@
                         <option>심사중</option>
                       </select>
                     </td>
-                    <td><span class="sr-only">제출</span><i class="svg-icon ico-success-fill "></i></td>
+                    <td><span class="sr-only">제출</span><i class="svg-icon ico-success-fill"></i></td>
                   </tr>
                   <tr>
                     <td>
