--- a/adm/html/index.html
+++ b/adm/html/index.html
@@ -49,43 +49,61 @@
 
           <div class="conts-hd search-top-box">
             <div class="filter-section">
-                <i class="svg-icon ico-filter"></i>
+                <i class="svg-icon ico-filter-type2"></i>
                 <div class="btn-group">
-                    <div class="tab-group">
-                        <button class="tab-btn">유치원</button>
-                        <button class="tab-btn">초등학교</button>
-                        <button class="tab-btn">중학교</button>
-                        <button class="tab-btn">고등학교</button>
-                        <button class="tab-btn">특수학교</button>
-                        <button class="tab-btn">각종학교</button>
+                  <div class="krds-check-area krds-filter-area" role="group" aria-label="학교 구분 선택">
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-kindergarten" checked>
+                      <label for="rdo-kindergarten">유치원</label>
                     </div>
-                    <div class="krds-check-area">
-                      <div class="krds-form-check">
-                        <input type="checkbox" name="chk_1" id="chk_1" checked>
-                        <label for="chk_1">전체</label>
-                        <span class="count"><em>48</em>개</span>
-                      </div>
-                      <div class="krds-form-check">
-                        <input type="checkbox" name="chk_1" id="chk_2">
-                        <label for="chk_2">심사중</label>
-                        <span class="count"><em>48</em>개</span>
-                      </div>
-                      <div class="krds-form-check">
-                        <input type="checkbox" name="chk_1" id="chk_3">
-                        <label for="chk_3">선정</label>
-                        <span class="count"><em>48</em>개</span>
-                      </div>
-                      <div class="krds-form-check">
-                        <input type="checkbox" name="chk_1" id="chk_4">
-                        <label for="chk_4">미선정</label>
-                        <span class="count"><em>48</em>개</span>
-                      </div>
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-elementary">
+                      <label for="rdo-elementary">초등학교</label>
                     </div>
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-middle">
+                      <label for="rdo-middle">중학교</label>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-high">
+                      <label for="rdo-high">고등학교</label>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-special">
+                      <label for="rdo-special">특수학교</label>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="radio" name="schoolType" id="rdo-etc">
+                      <label for="rdo-etc">각종학교</label>
+                    </div>
+                  </div>
+                  <div class="krds-check-area">
+                    <div class="krds-form-check">
+                      <input type="checkbox" name="chk_1" id="chk_1" checked>
+                      <label for="chk_1">전체</label>
+                      <span class="count"><em>48</em>개</span>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="checkbox" name="chk_1" id="chk_2">
+                      <label for="chk_2">심사중</label>
+                      <span class="count"><em>48</em>개</span>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="checkbox" name="chk_1" id="chk_3">
+                      <label for="chk_3">선정</label>
+                      <span class="count"><em>48</em>개</span>
+                    </div>
+                    <div class="krds-form-check">
+                      <input type="checkbox" name="chk_1" id="chk_4">
+                      <label for="chk_4">미선정</label>
+                      <span class="count"><em>48</em>개</span>
+                    </div>
+                  </div>
                 </div>
             </div>
             <div class="sch-form-wrap flex-inline">
               <div class="input-group">
-                <select class="krds-form-select completed" title="선택">
+                <select class="krds-form-select medium" title="선택">
                   <option value="">전체</option>
                   <option value="">담당자</option>
                   <option value="">담당부서</option>
@@ -94,7 +112,7 @@
                   <option value="">사업명</option>
                 </select>
                 <div class="sch-input">
-                  <input type="text" class="krds-input" placeholder="검색어를 입력해주세요" title="검색어 입력">
+                  <input type="text" class="krds-input medium" placeholder="검색어를 입력해주세요" title="검색어 입력">
                   <button type="button" class="krds-btn medium icon ico-search">
                     <span class="sr-only">검색</span>
                     <i class="svg-icon ico-sch"></i>
@@ -196,7 +214,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -247,7 +265,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -298,7 +316,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -349,7 +367,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -400,7 +418,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -451,7 +469,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -502,7 +520,7 @@
                     <td>
                       <div class="td-in-col2">
                         <p class="data-amount">1,000</p>
-                        <input type="text" class="krds-input small data-amount number-input" value="0" title="결정금액 입력">
+                        <input type="text" class="krds-input small data-amount number-input" placeholder="결정금액 입력">
                       </div>
                     </td>
                     <td>
@@ -531,7 +549,7 @@
             </div>
 
             <div class="page-btn-wrap both">
-              <div class="btn-wrap">
+              <div class="btn-wrap text gray">
                 <i class="svg-icon ico-lncheck-disabled"></i>
                 선택한 사업의 심사결과를
                 <select class="krds-form-select small" title="심사결과 선택">
@@ -548,14 +566,13 @@
                 <a href="javascript:void(0)" class="krds-btn small tertiary">선택SMS발송</a>
               </div>
             </div>
-
           </div>
-
           <div id="pagination" class="conts-ft"></div>
         </div>
-
     </div>
   </main>
+
+<script src="../js/admin-tooltip.js" defer></script>
 
 <!-- footer -->
   <div id="footer"></div>
