--- a/style/styleguide/styleguide.html
+++ b/style/styleguide/styleguide.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ko">
-<head th:with="KRDS_BASE='/krds/node_modules/krds-uiux/resources'">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="충남교육청" />
@@ -31,6 +31,32 @@
     <link rel="stylesheet" href="/style/styleguide/prism.css">
     <link rel="stylesheet" href="/style/styleguide/styleguide.css">
 
+    <script>
+        $(function () {
+        // prism toolbar title 추가
+        if (typeof Prism !== "undefined") {
+            Prism.hooks.add("complete", function (env) {
+            const toolbar = env.element.closest(".code-toolbar");
+            if (!toolbar) return;
+
+            const preTag = toolbar.querySelector("pre");
+            if (!preTag) return;
+
+            // data-title 읽기
+            const dataTitle = preTag.getAttribute("data-title");
+            const existingTitle = toolbar.querySelector(".toolbar-title");
+
+            // 중복 방지 (이미 있으면 다시 안 추가)
+            if (!existingTitle) {
+                const titleTag = document.createElement("h5");
+                titleTag.classList.add("toolbar-title");
+                titleTag.textContent = dataTitle ? dataTitle : "코드 예시";
+                toolbar.prepend(titleTag);
+            }
+            });
+        }
+        });
+    </script>
 </head>
 
 <body>
