style:스타일 수정

--- a/adm/tmpl/header.html
+++ b/adm/tmpl/header.html
@@ -4,81 +4,12 @@
       <!-- 헤더 상단 기타메뉴 -->
       <div class="header-container">
         <div class="inner">
-          <div class="header-utility">
-            <ul class="utility-list">
-              <li>
-                <a href="#" class="krds-btn small text" target="_blank" title="새 창 열기">
-                  메뉴명 <i class="svg-icon ico-go"></i>
-                </a>
-              </li>
-              <li>
-                <div class="krds-drop-wrap">
-                  <button type="button" class="krds-btn small text drop-btn">
-                    메뉴명 <i class="svg-icon ico-toggle"></i>
-                  </button>
-                  <div class="drop-menu">
-                    <div class="drop-in">
-                      <ul class="drop-list">
-                        <li><a href="#" class="item-link">메뉴명</a></li>
-                        <li><a href="#" class="item-link">메뉴명</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="krds-drop-wrap krds-resize">
-                  <button type="button" class="krds-btn small text drop-btn">
-                    메뉴명 <i class="svg-icon ico-toggle"></i>
-                  </button>
-                  <div class="drop-menu">
-                    <div class="drop-in">
-                      <ul class="drop-list">
-                        <li><button type="button" class="item-link sm">메뉴명</button></li>
-                        <li><button type="button" class="item-link md active">메뉴명</button></li>
-                        <li><button type="button" class="item-link lg">메뉴명</button></li>
-                        <li><button type="button" class="item-link xlg">메뉴명</button></li>
-                        <li><button type="button" class="item-link xxlg">메뉴명</button></li>
-                      </ul>
-                      <div class="drop-bottom">
-                        <button type="button" class="krds-btn medium text">
-                          <i class="svg-icon ico-reset"></i> 초기화
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="krds-drop-wrap">
-                  <button type="button" class="krds-btn small text drop-btn">
-                    메뉴명 <i class="svg-icon ico-toggle"></i>
-                  </button>
-                  <div class="drop-menu">
-                    <div class="drop-in">
-                      <ul class="drop-list">
-                        <li><a href="#" class="item-link ico-go" target="_blank" title="새 창 열림">메뉴명</a></li>
-                        <li><a href="#" class="item-link ico-go" target="_blank" title="새 창 열림">메뉴명</a></li>
-                        <li><a href="#" class="item-link ico-go" target="_blank" title="새 창 열림">메뉴명</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
           <div class="header-branding">
-            <h2 class="logo">
-              <a href="#">
-                <span class="sr-only">KRDS - Korea Design System</span>
-              </a>
-            </h2>
             <div class="header-actions">
-              <button type="button" class="btn-navi sch" title="통합검색 레이어">통합검색</button>
               <a href="#" class="btn-navi login">로그인</a>
               <button type="button" class="btn-navi join">회원가입</button>
               <div class="krds-drop-wrap my-drop">
-                <button type="button" class="btn-navi my drop-btn">나의 GOV</button>
+                <button type="button" class="btn-navi my drop-btn">내 정보</button>
                 <div class="drop-menu">
                   <div class="drop-in">
                     <div class="drop-top">
@@ -92,10 +23,10 @@
                       </dl>
                     </div>
                     <ul class="drop-list">
-                      <li><a href="#" class="item-link">나의 GOV 홈</a></li>
-                      <li><a href="#" class="item-link">나의 신청내역</a></li>
-                      <li><a href="#" class="item-link">나의 생활정보</a></li>
-                      <li><a href="#" class="item-link">나의 정보관리</a></li>
+                      <li><a href="#" class="item-link">정보수정</a></li>
+                      <li><a href="#" class="item-link">신청내역</a></li>
+                      <li><a href="#" class="item-link">신청정보</a></li>
+                      <li><a href="#" class="item-link">정보관리</a></li>
                     </ul>
                     <div class="drop-bottom">
                       <button type="button" class="krds-btn medium text">
