--- a/style/styleguide/styleguide.html
+++ b/style/styleguide/styleguide.html
@@ -11,25 +11,25 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Default KRDS JS -->
-    <script src="/krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
-    <script src="/krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
+    <script src="../../krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
+    <script src="../../krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
     <!-- Default KRDS CSS -->
     <link rel="stylesheet" as="style" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov-dynamic-subset.min.css" crossorigin/>
-    <link rel="stylesheet" href="/krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="/krds/node_modules/krds-uiux/resources/css/component/output.css" />
+    <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/component/output.css" />
     
     <!-- Custom -->
-    <script src="/adm/js/admin-custom.js" defer></script>
-    <link rel="stylesheet" href="/style/resources/css/krds-custom.css">
-    <link rel="stylesheet" href="/adm/css/admin-custom.css">
+    <script src="../../adm/js/admin-custom.js" defer></script>
+    <link rel="stylesheet" href="../resources/css/krds-custom.css">
+    <link rel="stylesheet" href="../../adm/css/admin-custom.css">
 
     <!-- styleguide -->
     <script src="https://cdn.jsdelivr.net/npm/prismjs/plugins/toolbar/prism-toolbar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/plugins/copy-to-clipboard/prism-copy-to-clipboard.min.js"></script>
-    <script src="/style/styleguide/prism.js" defer></script>
+    <script src="../styleguide/prism.js" defer></script>
 
-    <link rel="stylesheet" href="/style/styleguide/prism.css">
-    <link rel="stylesheet" href="/style/styleguide/styleguide.css">
+    <link rel="stylesheet" href="../styleguide/prism.css">
+    <link rel="stylesheet" href="../styleguide/styleguide.css">
 
     <script>
         $(function () {
@@ -225,7 +225,7 @@
                                 <div class="accordion-collapse collapse" role="region" id="aaccordionCollapseSample01" aria-labelledby="accordionHeaderSample01">
                                     <div class="accordion-body">
                                         <div class="g-code-box">
-                                            <pre data-src="/style/resources/html/icon.html"></pre>
+                                            <pre data-src="../resources/html/icon.html"></pre>
                                         </div>
                                     </div>
                                 </div>
