--- a/adm/html/application-admin-all-list.html
+++ b/adm/html/application-admin-all-list.html
@@ -12,19 +12,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css" crossorigin />
 
   <!-- Default KRDS JS -->
-  <script src="/krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
-  <script src="/krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
+  <script src="../../krds/node_modules/krds-uiux/resources/js/component/ui-script.js" defer></script>
+  <script src="../../krds/node_modules/krds-uiux/resources/js/plugin/swiper-bundle.min.js" defer></script>
 
   <!-- Default KRDS CSS -->
-  <link rel="stylesheet" href="/krds/node_modules/krds-uiux/resources/css/component/output.css" />
-  <link rel="stylesheet" href="/krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/component/output.css" />
+  <link rel="stylesheet" href="../../krds/node_modules/krds-uiux/resources/css/plugin/swiper-bundle.min.css" />
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
   <!-- Custom -->
   <script src="../js/admin-custom.js" defer></script>
-  <link rel="stylesheet" href="/style/resources/css/krds-custom.css">
+  <script src="../js/admin-tooltip.js" defer></script>
+  <link rel="stylesheet" href="../../style/resources/css/krds-custom.css">
   <link rel="stylesheet" href="../css/admin-custom.css">
 
 </head>
@@ -103,13 +104,21 @@
             </div>
             <div class="sch-form-wrap flex-inline">
               <div class="input-group">
-                <select class="krds-form-select medium" title="선택">
+                <select class="krds-form-select medium" title="년도 선택">
                   <option value="">전체</option>
+                  <option value="">2026</option>
+                  <option value="">2025</option>
+                  <option value="">2024</option>
+                  <option value="">2023</option>
+                  <option value="">2022</option>
+                </select>
+                <select class="krds-form-select medium" title="검색 조건">
+                  <option value="">전체</option>
+                  <option value="">학교명</option>
                   <option value="">담당자</option>
-                  <option value="">담당부서</option>
-                  <option value="">사업부서</option>
                   <option value="">사업번호</option>
                   <option value="">사업명</option>
+                  <option value="">지역명</option>
                 </select>
                 <div class="sch-input">
                   <input type="text" class="krds-input medium" placeholder="검색어를 입력해주세요" title="검색어 입력">
@@ -571,8 +580,6 @@
         </div>
     </div>
   </main>
-
-<script src="../js/admin-tooltip.js" defer></script>
 
 <!-- footer -->
   <div id="footer"></div>
