chore: 퍼블리싱 파일 전체

--- a/adm/html/application-admin-all-list.html
+++ b/adm/html/application-admin-all-list.html
@@ -6,7 +6,7 @@
   <meta name="description" content="충남교육청" />
   <title th:text="${pageTitle}">충남교육청 단위학교 사업선택제 관리자 시스템</title>
 
-  <link rel="icon" href="./favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
 
   <!-- Pretendard GOV -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-gov.min.css" crossorigin />
