--- a/style/styleguide/styleguide.html
+++ b/style/styleguide/styleguide.html
@@ -6,7 +6,7 @@
     <meta name="description" content="충남교육청" />
     <title th:text="${pageTitle}">스타일가이드</title>
 
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
