publish: header 1차 디자인

--- a/adm/html/application-admin-all-list.html
+++ b/adm/html/application-admin-all-list.html
@@ -165,7 +165,7 @@
                 <colgroup>
                   <col style="width:2%;">
                   <col style="width:5%;">
-                  <col style="width:5%;">
+                  <col style="width:4%;">
                   <col>
                   <col style="width:11%;">
                   <col style="width:9%;">
@@ -364,7 +364,7 @@
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-개방형-004</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
