--- a/adm/tmpl/header.html
+++ b/adm/tmpl/header.html
@@ -1,65 +1,64 @@
 <header class="header">
-    <div class="header-wrapper">
-        <div class="header-content">
-            <!-- Logo -->
-            <div class="logo">
-                <img src="../img/logo_wh.svg">
-            </div>
+  <div class="header-wrapper">
+      <div class="header-content">
+          <!-- Logo -->
+          <div class="logo">
+              <img src="../img/logo_wh.svg">
+          </div>
 
-            <!-- Main Navigation -->
-            <nav class="main-nav">
-                <a href="#" class="nav-item active">
-                    <span>회원관리</span>
-                    <div class="nav-indicator"></div>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>공모사업관리</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>사업신청관리</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>결과보고관리</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>운영관리</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>통계관리</span>
-                </a>
-                <a href="#" class="nav-item">
-                    <span>게시판관리</span>
-                </a>
-            </nav>
+          <!-- Main Navigation -->
+          <nav class="main-nav">
+              <a href="#" class="nav-item active">
+                  <span>회원관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>공모사업관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>사업신청관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>결과보고관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>운영관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>통계관리</span>
+              </a>
+              <a href="#" class="nav-item">
+                  <span>게시판관리</span>
+              </a>
+          </nav>
 
-            <!-- User Section -->
-            <div class="user-section">
-                <div class="mypage">
-                    <div class="profile-avatar">
-                        <i class="svg-icon ico-facesmile blue"></i>
-                    </div>
-                    <div class="setting-badge">
-                        <i class="svg-icon ico-setting white"></i>
-                    </div>
-                    <div class="profile-info">
-                        <p class="profile-name"><strong>홍길동</strong>님</p>
-                        <p class="profile-role">최고관리자</p>
-                    </div>
-                </div>
-                <button class="logout-btn">
-                    <i class="svg-icon ico-logout white"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-</header>
-
-<!-- Sub Navigation -->
-<div class="sub-nav-wrap">
+          <!-- User Section -->
+          <div class="user-section">
+              <div class="mypage">
+                  <div class="profile-avatar">
+                      <i class="svg-icon ico-facesmile blue"></i>
+                  </div>
+                  <a href="javascript:void(0)" class="setting-badge">
+                      <i class="svg-icon ico-setting white"></i>
+                  </a>
+                  <div class="profile-info">
+                      <p class="profile-name"><strong>홍길동</strong>님</p>
+                      <p class="profile-role">최고관리자</p>
+                  </div>
+              </div>
+              <button class="logout-btn">
+                  <i class="svg-icon ico-logout white"></i>
+              </button>
+          </div>
+      </div>
+  </div>
+  <!-- Sub Navigation -->
+  <div class="sub-nav-wrap">
     <nav class="sub-nav">
         <a href="#" class="sub-nav-item">단위학교 담당자</a>
         <a href="#" class="sub-nav-item active">사업담당 장학사</a>
         <a href="#" class="sub-nav-item">지원청 장학사</a>
         <a href="#" class="sub-nav-item">감사 관리</a>
     </nav>
-</div>
+  </div>
+</header>
+
