--- a/_common/styleguide/styleguide.html
+++ b/_common/styleguide/styleguide.html
@@ -30,33 +30,6 @@
 
     <link rel="stylesheet" href="../styleguide/prism.css">
     <link rel="stylesheet" href="../styleguide/styleguide.css">
-
-    <script>
-        $(function () {
-        // prism toolbar title 추가
-        if (typeof Prism !== "undefined") {
-            Prism.hooks.add("complete", function (env) {
-            const toolbar = env.element.closest(".code-toolbar");
-            if (!toolbar) return;
-
-            const preTag = toolbar.querySelector("pre");
-            if (!preTag) return;
-
-            // data-title 읽기
-            const dataTitle = preTag.getAttribute("data-title");
-            const existingTitle = toolbar.querySelector(".toolbar-title");
-
-            // 중복 방지 (이미 있으면 다시 안 추가)
-            if (!existingTitle) {
-                const titleTag = document.createElement("h5");
-                titleTag.classList.add("toolbar-title");
-                titleTag.textContent = dataTitle ? dataTitle : "코드 예시";
-                toolbar.prepend(titleTag);
-            }
-            });
-        }
-        });
-    </script>
 </head>
 
 <body>
@@ -69,154 +42,7 @@
                 <section class="g-conts-area">
                     <h4 class="con-tit">아이콘</h4>
                     <div class="g-example-wrap">
-                        <div class="g-example bg-dark-gray">
-                            <strong>마스크 아이콘-색 변경 가능</strong>
-                            <div class="g-example-inner">
-                                <i class="svg-icon ico-angle"></i>
-                                <i class="svg-icon ico-angle disabled"></i>
-                                <i class="svg-icon ico-angle up"></i>
-                                <i class="svg-icon ico-angle left"></i>
-                                <i class="svg-icon ico-angle right"></i>
-                                <i class="svg-icon ico-sch"></i>
-                                <i class="svg-icon ico-upload"></i>
-                                <i class="svg-icon ico-call"></i>
-                                <i class="svg-icon ico-faq"></i>
-                                <i class="svg-icon ico-like"></i>
-                                <i class="svg-icon ico-share"></i>
-                                <i class="svg-icon ico-more"></i>
-                                <i class="svg-icon ico-sch-plus"></i>
-                                <i class="svg-icon ico-go"></i>
-                                <i class="svg-icon ico-down"></i>
-                                <i class="svg-icon ico-filter"></i>
-                                <i class="svg-icon ico-reset"></i>
-                                <i class="svg-icon ico-log"></i>
-                                <i class="svg-icon ico-func"></i>
-                                <i class="svg-icon ico-func up"></i>
-                                <i class="svg-icon ico-logout"></i>
-                                <i class="svg-icon ico-email"></i>
-                                <i class="svg-icon ico-print"></i>
-                                <i class="svg-icon ico-scrap"></i>
-                                <i class="svg-icon ico-del"></i>
-                                <i class="svg-icon ico-popup-close"></i>
-                                <i class="svg-icon ico-delete-fill"></i>
-                                <i class="svg-icon ico-plus"></i>
-                                <i class="svg-icon ico-setting"></i>
-                                <i class="svg-icon ico-link"></i>
-                                <i class="svg-icon ico-refresh"></i>
-                                <i class="svg-icon ico-toggle"></i>
-                                <i class="svg-icon ico-pw-visible"></i>
-                                <i class="svg-icon ico-pw-visible-on"></i>
-                                <i class="svg-icon ico-page-next"></i>
-                                <i class="svg-icon ico-bread-home"></i>
-                                <i class="svg-icon ico-cal-move"></i>
-                                <i class="svg-icon ico-calendar"></i>
-                                <i class="svg-icon ico-modal-close"></i>
-                                <i class="svg-icon ico-fold"></i>
-                                <i class="svg-icon ico-fold right"></i>
-                                <i class="svg-icon ico-swiper-play"></i>
-                                <i class="svg-icon ico-swiper-stop"></i>
-                                <i class="svg-icon ico-tooltip"></i>
-                                <i class="svg-icon ico-urgent-danger"></i>
-                                <i class="svg-icon ico-blog"></i>
-                                <i class="svg-icon ico-facebook"></i>
-                                <i class="svg-icon ico-instagram"></i>
-                                <i class="svg-icon ico-sns-x"></i>
-                                <i class="svg-icon ico-youtube"></i>
-                                <i class="svg-icon ico-all"></i>
-                                <i class="svg-icon ico-join"></i>
-                                <i class="svg-icon ico-my"></i>
-                                <i class="svg-icon ico-login-go"></i>
-                                <i class="svg-icon ico-global"></i>
-                                <i class="svg-icon ico-view-mode"></i>
-                                <i class="svg-icon ico-go-top"></i>
-                                <i class="svg-icon ico-login-type01"></i>
-                                <i class="svg-icon ico-login-type02"></i>
-                                <i class="svg-icon ico-login-type03"></i>
-                                <i class="svg-icon ico-login-type04"></i>
-                                <i class="svg-icon ico-login-type05"></i>
-                                <i class="svg-icon ico-login-type06"></i>
-                                <i class="svg-icon ico-file"></i>
-                                <i class="svg-icon ico-checkbox"></i>
-                                <i class="svg-icon ico-arrsort"></i>
-                                <i class="svg-icon ico-atomic"></i>
-                                <i class="svg-icon ico-facesad"></i>
-                                <i class="svg-icon ico-access"></i>
-                                <i class="svg-icon ico-analy"></i>
-                                <i class="svg-icon ico-rotaleft"></i>
-                                <i class="svg-icon ico-blur"></i>
-                                <i class="svg-icon ico-bookmk"></i>
-                                <i class="svg-icon ico-certi"></i>
-                                <i class="svg-icon ico-component"></i>
-                                <i class="svg-icon ico-copy"></i>
-                                <i class="svg-icon ico-docu"></i>
-                                <i class="svg-icon ico-docu-bold"></i>
-                                <i class="svg-icon ico-docu-twin"></i>
-                                <i class="svg-icon ico-docu-check"></i>
-                                <i class="svg-icon ico-dummy"></i>
-                                <i class="svg-icon ico-heart"></i>
-                                <i class="svg-icon ico-edit-bold"></i>
-                                <i class="svg-icon ico-edit"></i>
-                                <i class="svg-icon ico-edit-type2"></i>
-                                <i class="svg-icon ico-eleva"></i>
-                                <i class="svg-icon ico-ellipsv"></i>
-                                <i class="svg-icon ico-facesmile"></i>
-                                <i class="svg-icon ico-filter-type2"></i>
-                                <i class="svg-icon ico-hdphone"></i>
-                                <i class="svg-icon ico-idtt"></i>
-                                <i class="svg-icon ico-img"></i>
-                                <i class="svg-icon ico-lncheck"></i>
-                                <i class="svg-icon ico-locaawy"></i>
-                                <i class="svg-icon ico-password"></i>
-                                <i class="svg-icon ico-map"></i>
-                                <i class="svg-icon ico-minus"></i>
-                                <i class="svg-icon ico-mode"></i>
-                                <i class="svg-icon ico-newfolder"></i>
-                                <i class="svg-icon ico-open"></i>
-                                <i class="svg-icon ico-paycard"></i>
-                                <i class="svg-icon ico-helpline"></i>
-                                <i class="svg-icon ico-receipt"></i>
-                                <i class="svg-icon ico-reset-type2"></i>
-                                <i class="svg-icon ico-shadow"></i>
-                                <i class="svg-icon ico-spread"></i>
-                                <i class="svg-icon ico-sync"></i>
-                                <i class="svg-icon ico-time"></i>
-                                <i class="svg-icon ico-trans"></i>
-                                <i class="svg-icon ico-trash"></i>
-                                <i class="svg-icon ico-tray"></i>
-                                <i class="svg-icon ico-trophy"></i>
-                                <i class="svg-icon ico-typobox"></i>
-                                <i class="svg-icon ico-typo"></i>
-                                <i class="svg-icon ico-veiwall"></i>
-                                <i class="svg-icon ico-refile-disabled"></i>
-                                <i class="svg-icon ico-lncheck-disabled"></i>
-                            </div>
-                            <strong>이미지 아이콘-색 변경 불가능</strong>
-                            <div class="g-example-inner">
-                                <i class="svg-icon ico-flag"></i>
-                                <i class="svg-icon ico-help"></i>
-                                <i class="svg-icon ico-success-fill"></i>
-                                <i class="svg-icon ico-information-fill"></i>
-                                <i class="svg-icon ico-error-fill"></i>
-                                <i class="svg-icon ico-complete-fill"></i>
-                                <i class="svg-icon ico-cmpdisabled-fill"></i>
-                                <i class="svg-icon ico-reding-fill"></i>
-                                <i class="svg-icon ico-yeling-fill"></i>
-                                <i class="svg-icon ico-danger-fill"></i>
-                                <i class="svg-icon ico-dangergr-fill"></i>
-                                <i class="svg-icon ico-yelinfo-fill"></i>
-                                <i class="svg-icon ico-reject-fill"></i>
-                                <i class="svg-icon ico-return-fill"></i>
-                                <i class="svg-icon ico-warning-fill"></i>
-                                <i class="svg-icon ico-refile-fill"></i>
-                                <i class="svg-icon ico-twinck-fill"></i>
-                                <i class="svg-icon ico-library-fill"></i>
-                                <i class="svg-icon ico-roundck-fill"></i>
-                                <i class="svg-icon ico-downblue-fill"></i>
-                                <i class="svg-icon ico-upred-fill"></i>
-                                <i class="svg-icon ico-curser-fill"></i>
-                                <i class="svg-icon ico-pdf-fill"></i>
-                            </div>
-                        </div>
+                        <div class="g-example bg-dark-gray includeJs" data-include-file="../resources/html/icon.html"></div>
                         <div class="g-code-wrap krds-accordion">
                             <div class="accordion-item">
                                 <h5 class="accordion-header">
@@ -234,10 +60,83 @@
                     </div>
                 </section>
 
+                <section class="g-conts-area">
+                    <h4 class="con-tit">KRDS badge</h4>
+                    <div class="g-example-wrap">
+                        <div class="g-example includeJs" data-include-file="/krds/node_modules/krds-uiux/html/code/badge.html"></div>
+                        <div class="g-code-wrap krds-accordion">
+                            <div class="accordion-item">
+                                <h5 class="accordion-header">
+                                    <button type="button" class="btn-accordion" aria-expanded="true" id="accordionHeaderSample01" aria-controls="accordionCollapseSample01">코드 확인하기</button>
+                                </h5>
+                                <div class="accordion-collapse collapse" role="region" id="aaccordionCollapseSample01" aria-labelledby="accordionHeaderSample01">
+                                    <div class="accordion-body">
+                                        <div class="g-code-box">
+                                            <pre data-src="/krds/node_modules/krds-uiux/html/code/badge.html"></pre>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
             </div>
         </div>
     </main>
 </div>
+
+
+<script type="text/javascript">
+    $(function () {
+    // prism toolbar title 추가
+    if (typeof Prism !== "undefined") {
+        Prism.hooks.add("complete", function (env) {
+        const toolbar = env.element.closest(".code-toolbar");
+        if (!toolbar) return;
+
+        const preTag = toolbar.querySelector("pre");
+        if (!preTag) return;
+
+        // data-title 읽기
+        const dataTitle = preTag.getAttribute("data-title");
+        const existingTitle = toolbar.querySelector(".toolbar-title");
+
+        // 중복 방지 (이미 있으면 다시 안 추가)
+        if (!existingTitle) {
+            const titleTag = document.createElement("h5");
+            titleTag.classList.add("toolbar-title");
+            titleTag.textContent = dataTitle ? dataTitle : "코드 예시";
+            toolbar.prepend(titleTag);
+        }
+        });
+    }
+    });
+
+    (async function(){
+        async function includeHtml() {
+            const includeTarget = document.querySelectorAll('.includeJs');
+            for (let el of includeTarget) {
+            const targetFile = el.dataset.includeFile;
+            if (targetFile) {
+                try {
+                    const response = await fetch(targetFile);
+                    if (!response.ok) { // 성공적인 응답이 아닐 경우 에러 처리
+                        throw new Error('include not found.');
+                    }
+                    const html = await response.text(); // 응답 본문을 텍스트로 변환
+                    el.innerHTML = html; // 받은 HTML을 대상 요소에 삽입
+                } catch (error) {
+                    el.innerHTML = error.message; // 에러가 발생하면 메시지를 대상 요소에 삽입
+                }
+            }
+        }
+        };
+    
+        await includeHtml();
+    })();
+</script>
+
 
 </body>
 
