publish:팝업목록페이지

--- a/adm/html/application-admin-all-list.html
+++ b/adm/html/application-admin-all-list.html
@@ -205,12 +205,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -256,12 +256,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project02"></span>
                           <span>2026-개방형-002</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
                       </div>
                     </td>
                     <td>
@@ -307,12 +307,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project03"></span>
                           <span>2026-개방형-003</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
                       </div>
                     </td>
                     <td>
@@ -358,12 +358,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-개방형-004</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영 개방형 사업</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -409,12 +409,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project05"></span>
                           <span>2026-개방형-005</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
                       </div>
                     </td>
                     <td>
@@ -460,12 +460,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-006</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
                       </div>
                     </td>
                     <td>
@@ -511,12 +511,12 @@
                     <td>2026</td>
                     <td>초등</td>
                     <td>
-                      <div class="td-in-col2 project-name">
+                      <div class="td-in-col2 project-name tooltip-hs">
                         <p class="info-top">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-개방형-007</span>
                         </p>
-                        <strong>[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
+                        <strong class="tooltip-tt">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생제안 정책 운영</strong>
                       </div>
                     </td>
                     <td>
