--- a/adm/html/member-supervisor-edit.html
+++ b/adm/html/member-supervisor-edit.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input disabled" value="epkikey1234-e123-e123-epkikey123456789" disabled>
+                                <input type="text" class="krds-input disabled" value="epkikey1234-e123-e123-epkikey123456789" readonly>
                             </div>
                         </div>
                     </div>
