--- a/adm/html/operation-popup-list.html
+++ b/adm/html/operation-popup-list.html
@@ -376,7 +376,7 @@
 
             <div class="page-btn-wrap">
               <div class="btn-wrap">
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택수정</a>
+                <a href="javascript:void(0)" class="krds-btn small tertiary">선택삭제</a>
                 <a href="javascript:void(0)" class="krds-btn small primary">신규둥록</a>
               </div>
             </div>
