--- a/_common/styleguide/styleguide.html
+++ b/_common/styleguide/styleguide.html
@@ -61,7 +61,7 @@
                 </section>
 
                 <section class="g-conts-area">
-                    <h4 class="con-tit">KRDS badge</h4>
+                    <h4 class="con-tit">badge</h4>
                     <div class="g-example-wrap">
                         <div class="g-example includeJs" data-include-file="/krds/node_modules/krds-uiux/html/code/badge.html"></div>
                         <div class="g-code-wrap krds-accordion">
