--- a/_common/styleguide/styleguide.html
+++ b/_common/styleguide/styleguide.html
@@ -40,7 +40,7 @@
             <div class="contents contents-box contents-box-shadow">
 
                 <section class="g-conts-area">
-                    <h4 class="con-tit">아이콘</h4>
+                    <h4 class="con-tit">icon</h4>
                     <div class="g-example-wrap">
                         <div class="g-example bg-dark-gray includeJs" data-include-file="../resources/html/icon.html"></div>
                         <div class="g-code-wrap krds-accordion">
@@ -61,9 +61,9 @@
                 </section>
 
                 <section class="g-conts-area">
-                    <h4 class="con-tit">badge</h4>
+                    <h4 class="con-tit">button</h4>
                     <div class="g-example-wrap">
-                        <div class="g-example includeJs" data-include-file="/krds/node_modules/krds-uiux/html/code/badge.html"></div>
+                        <div class="g-example includeJs" data-include-file="../resources/html/button.html"></div>
                         <div class="g-code-wrap krds-accordion">
                             <div class="accordion-item">
                                 <h5 class="accordion-header">
@@ -72,7 +72,28 @@
                                 <div class="accordion-collapse collapse" role="region" id="aaccordionCollapseSample01" aria-labelledby="accordionHeaderSample01">
                                     <div class="accordion-body">
                                         <div class="g-code-box">
-                                            <pre data-src="/krds/node_modules/krds-uiux/html/code/badge.html"></pre>
+                                            <pre data-src="../resources/html/button.html"></pre>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="g-conts-area">
+                    <h4 class="con-tit">badge</h4>
+                    <div class="g-example-wrap">
+                        <div class="g-example includeJs" data-include-file="../resources/html/badge.html"></div>
+                        <div class="g-code-wrap krds-accordion">
+                            <div class="accordion-item">
+                                <h5 class="accordion-header">
+                                    <button type="button" class="btn-accordion" aria-expanded="true" id="accordionHeaderSample01" aria-controls="accordionCollapseSample01">코드 확인하기</button>
+                                </h5>
+                                <div class="accordion-collapse collapse" role="region" id="aaccordionCollapseSample01" aria-labelledby="accordionHeaderSample01">
+                                    <div class="accordion-body">
+                                        <div class="g-code-box">
+                                            <pre data-src="../resources/html/badge.html"></pre>
                                         </div>
                                     </div>
                                 </div>
