--- a/adm/html/operation-popup-list.html
+++ b/adm/html/operation-popup-list.html
@@ -361,10 +361,10 @@
                     <td><i class="svg-icon ico-danger-fill">비공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" download="" class="krds-btn small line" title="수정">
+                        <a href="javascript:void(0)" class="krds-btn small line" title="수정">
                             <i class="svg-icon ico-edit">수정</i>
                         </a>
-                        <a href="javascript:void(0)" download="" class="krds-btn small line" title="삭제">
+                        <a href="javascript:void(0)" class="krds-btn small line" title="삭제">
                             <i class="svg-icon ico-trash">삭제</i>
                         </a>
                       </div>
