feat(page):사용자페이지

--- a/kr/tmpl/header.html
+++ b/kr/tmpl/header.html
@@ -1,1 +1,99 @@
-header
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>충청남도교육청 단위학교 사업선택제 - Header</title>
+    <link rel="stylesheet" href="header.css">
+</head>
+<body>
+    <!-- Header Container -->
+    <header class="header">
+        <!-- Top Navigation Bar -->
+        <div class="header-top">
+            <!-- Logo -->
+            <div class="logo">
+                <a href=""><img src="../img/logo_cne.svg"></a>
+            </div>
+
+            <!-- Main Navigation (GNB) -->
+            <nav class="gnb">
+                <a href="#" class="gnb-item">사업선택제 소개</a>
+                <a href="#" class="gnb-item">사업신청</a>
+                <a href="#" class="gnb-item">결과보고</a>
+                <a href="#" class="gnb-item">안내·홍보</a>
+                <a href="#" class="gnb-item">질의·응답</a>
+            </nav>
+
+            <!-- Utility Menu -->
+            <div class="utility">
+                <a href="#" class="utility-item">
+                   <img src="../img/ico_user.svg">
+                    <span>마이페이지</span>
+                </a>
+                <a href="#" class="utility-item">
+                   <img src="../img/ico_edit.svg">
+                    <span>정보수정</span>
+                </a>
+                <a href="#" class="utility-item">
+                    <img src="../img/ico_unlock.svg">
+                    <span>로그아웃</span>
+                </a>
+            </div>
+        </div>
+
+        <!-- 2-Depth Navigation Menu -->
+        <div class="depth-menu">
+            <div class="depth-menu-content">
+                <!-- Column 1: 사업선택제 소개 -->
+                <div class="depth-column">
+                    <div class="depth-title">
+                        사업선택제 소개
+                    </div>
+                    <a href="#" class="depth-item">단위학교 사업선택제란?</a>
+                </div>
+
+                <!-- Column 2: 사업신청 (Active) -->
+                <div class="depth-column">
+                    <div class="depth-title active">
+                        사업신청
+                    </div>
+                    <a href="#" class="depth-item">선택사업</a>
+                    <a href="#" class="depth-item active">선택 외 사업</a>
+                    <a href="#" class="depth-item">개방형사업</a>
+                    <a href="#" class="depth-item">특교 사업</a>
+                    <a href="#" class="depth-item">자율 사업</a>
+                    <a href="#" class="depth-item">사업신청 조회</a>
+                </div>
+
+                <!-- Column 3: 결과보고 -->
+                <div class="depth-column">
+                    <div class="depth-title">
+                        결과보고
+                    </div>
+                    <a href="#" class="depth-item">보고현황</a>
+                </div>
+
+                <!-- Column 4: 안내·홍보 -->
+                <div class="depth-column">
+                    <div class="depth-title">
+                        안내·홍보
+                    </div>
+                    <a href="#" class="depth-item">공지사항</a>
+                    <a href="#" class="depth-item">자료실</a>
+                </div>
+
+                <!-- Column 5: 질의·응답 -->
+                <div class="depth-column">
+                    <div class="depth-title">
+                        질의·응답
+                    </div>
+                    <a href="#" class="depth-item">질의응답</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <script src="header.js"></script>
+</body>
+</html>
